--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
   
            <div class="sns introduction-sns">
              <ul>
-               <li><a href="https://twitter.com/Ze5rmrtI"><i class="fab fa-twitter"></i></a><li>
-               <li><a href="https://www.facebook.com/profile.php?id=100015978254391"><i class="fab fa-facebook-f " ></i></a></li>
-               <li><a href="http://burogu.chowder.jp/"><i class="fab fa-wordpress"></i></a></li>
+               <li><a href=""><i class="fab fa-twitter"></i></a><li>
+               <li><a href=""><i class="fab fa-facebook-f " ></i></a></li>
+               <li><a href=""><i class="fab fa-wordpress"></i></a></li>
              </ul>
            </div><!-- ここまでsns introductioin sns-->
          </div><!-- ここまでintroduction-content-->
@@ -168,9 +168,9 @@
           </div> <!-- ここまでcontact-text-->
           <div class="sns content-sns">
             <ul>
-              <li><a href="https://twitter.com/Ze5rmrtI"><i class="fab fa-twitter"></i></a><li>
-              <li><a href="https://www.facebook.com/profile.php?id=100015978254391"><i class="fab fa-facebook-f " ></i></a></li>
-              <li><a href="http://burogu.chowder.jp/"><i class="fab fa-wordpress"></i></a></li>
+              <li><a href=""><i class="fab fa-twitter"></i></a><li>
+              <li><a href=""><i class="fab fa-facebook-f " ></i></a></li>
+              <li><a href=""><i class="fab fa-wordpress"></i></a></li>
             </ul>
           </div><!-- ここまでsns content-sns-->    
         </div><!-- ここまでcontent-item-->
